# genai-dev-coach

./: README.md  pyproject.toml
app/core/: agents.py
