[tool.poetry]
name = "genai_dev_coach"
version = "0.1.0"
description = "A CLI tool to help developers practice explaining projects and reviewing technical concepts using Hugging Face's hosted generative models."
authors = ["Alexia <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
python-dotenv = "^1.0.0"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.4"  # You can check for latest

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["tests/fixtures", ".venv"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errors, Pyflakes, Import sort